# Terrific

./: .gitignore  .gitmodules  .ycm_extra_conf.py  .ycm_extra_conf.py.backup  CMakeLists.txt  Makefile  build.sh  init-repository.sh
cmake_modules/: FindLua53.cmake  sol2.cmake
data/: MyShader.frag  MyShader.vert  StarTunnel.frag  StarTunnel.vert  resources.conf
src/: CMakeLists.txt
src/Example/: Application.cpp  Application.h  Bitmap.cpp  CMakeLists.txt  GuiGfxElement.h  Planet.h  SphereDrawable.cpp  SphereDrawable.h  main.cpp
src/Terrific/: CMakeLists.txt  Terrific.cpp
src/Terrific/GL/: CMakeLists.txt  SphereDrawable.cpp  SphereDrawable.h
src/Terrific/Geometry/: CMakeLists.txt  SphericalVoronoi.cpp  SphericalVoronoi.h
src/Terrific/Geometry/Test/: CMakeLists.txt  SphericalVoronoiTest.cpp
src/Terrific/Impl/: Person.h
src/Terrific/Math/: CMakeLists.txt  Math.cpp  Math.h  Math.hpp  Types.h
src/Terrific/Meta/: CMakeLists.txt  JsonCast.h  MovieInfo.h  Person.h
src/Terrific/Meta/Test/: CMakeLists.txt  CerealTest.cpp  EntityTest.cpp  MetaTest.cpp  SafeReferenceTest.cpp  SerializationTest.cpp  SettingsGenerator.cpp  TestUtils.hpp  safe_reference.lua
src/Terrific/Meta/Test2/: CMakeLists.txt  SerializationTest.cpp
src/Terrific/System/: CMakeLists.txt  SerializeClass.cpp
src/Terrific/System.old/: Application.cpp  Application.h  CMakeLists.txt  Script.h  SerializeClass.cpp
src/Terrific/System.old/Test/: CMakeLists.txt  main.cpp.old
src/Terrific/System/Test/: CMakeLists.txt  SafeReference.cpp  SerializationTest.cpp  main.cpp
src/Terrific/Utility/: CMakeLists.txt  Example.cpp  Example.h  Log.cpp  Log.h
src/TestPlanet/: Application.cpp  Application.h  Bitmap.h  CMakeLists.txt  FastNoise_SRCS  GuiGfxElement.cpp  SphereDrawable.cpp  SphereDrawable.h  main.cpp
